# juliOS-superteam

./: AGENT_CREATION_SYSTEM.md  CRAWLERS_README.md  README.md  package-lock.json  package.json  sentiment_test_results.json  test_crawlers.sh  test_telegram_crawler.sh
JuliaOS/julia/: Pkg  Project.toml  analytics_consensus.json  analytics_default_2025-07-29T15-10-54.425.json  analytics_default_2025-07-29T15-27-44.323.json  analytics_reddit.json  analytics_sentiment.json  analytics_test_export_2025-07-29T15-12-21.972.json  analytics_test_export_2025-07-29T15-12-45.870.json  analytics_trend.json  analytics_unified.json  api_analysis_analytics.json  api_consensus_analytics.json  api_crawler_analytics.json  api_server.jl  api_server_analytics.jl  api_server_analytics_fixed.jl  api_server_final.jl  api_server_fixed.jl  api_server_minimal.jl  api_server_simple.jl  api_server_working.jl  check_consensus.jl  check_sentiment.jl  check_trend.jl  consensus_check_results.json  debug_analytics.jl  demo_consensus.jl  demo_sentiment.jl  demo_trend.jl  get_analytics.jl  integrate_analytics.jl  sentiment_check_results.json  simple_integration_test.jl  simple_reddit_sentiment_test.jl  simple_sentiment_test.jl  (+11 more)
contract/: Anchor.toml  package-lock.json  package.json
contract/programs/contract/: Cargo.toml
contract/programs/contract/src/: lib.rs
frontend/: AGENT_IMPLEMENTATION_SUMMARY.md  AGENT_TYPES_UPDATE.md  CAMPAIGN_LOGGING.md  CRAWLER_AGENTS_CHANGES.md  FIX_SUMMARY.md  compose.yaml  package-lock.json  package.json  sentiment_test_results.json  tailwind.config.ts
(+111 files in other folders)
